Changed the api the text paste is taken from, fixed css not wraping the text

--- a/src/client/src/components/paste.scss
+++ b/src/client/src/components/paste.scss
@@ -8,6 +8,7 @@
   min-width: 560px;
   height: max-content;
   border-radius: 5px;
+  white-space: pre-wrap;
   .title {
     text-align: center;
   }
